Update for lazy default attributes.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -1197,10 +1197,12 @@ ISO C, the attribute ought to be added by fixincludes rather than
 presuming anything about its semantics within the compiler.  All this
 special handing should be disabled by <samp>-ffreestanding</samp>.</p>
 
-<p>There should be a unified way of attaching attributes to functions
+<p>There is now a unified way of attaching attributes to functions
 with known semantics when they are declared (explicitly or
-implicitly), which should also be used for "builtins" such as exit and
-abort that only exist for this purpose.</p></li>
+implicitly); see <code>builtin-attrs.def</code>.
+This should be used for "builtins" such as exit and
+abort that only exist for this purpose as well as for functions such
+as <code>malloc</code> handled by <code>special_function_p</code>.</p></li>
 
 <li>Move all flags shared between C and C++ to <code>c-common.[ch]</code>.
 
