2001-10-02  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
        * docs.html: Update links for Per Bothner.

        * papers/nosb.html: Update link to Java page and Cygnus/Red Hat
        site.  Fix markup.

--- a/htdocs/java/faq-portugese.html
+++ b/htdocs/java/faq-portugese.html
@@ -511,7 +511,7 @@ apenas muito similar em funcionalidade e&nbsp; projeto. Voc&ecirc; pode
 retirar algumas classes para obter suporte a RMI na libgcj. Entretanto,
 a implementa&ccedil;&atilde;o requer algumas classes em java.* e sun.*
 que n&atilde;o s&atilde;o parte da libgcj.</blockquote>
-&Eacute; poss&iacute;vel usar a <a href="http://wwwipd.ira.uka.de/%7Ehauma/EfficientRMI/">implementa&ccedil;&atilde;o
+&Eacute; poss&iacute;vel usar a <a href="http://wwwipd.ira.uka.de/~hauma/KaRMI/">implementa&ccedil;&atilde;o
 RMI </a>de JavaParty , mas a licen&ccedil;a &eacute; muito mais restritiva
 que aquela da NinjaRMI. Detalhes abaixo:
 <blockquote>O muito mais r&aacute;pido e informal RMI e a apropriada eficiente
