Fix, update, or remove tons of broken and redirected links.

--- a/htdocs/egcs-1.0/egcs-1.0.1.html
+++ b/htdocs/egcs-1.0/egcs-1.0.1.html
@@ -117,12 +117,8 @@ will update those pages as new information becomes available.
 <p>Update: Big thanks to Stanford for providing a high speed link for
 downloading EGCS (go.cygnus.com)!
 
-<p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-Download EGCS 1.0.1
-from ftp.cygnus.com (USA California)</a>
-<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
-Download EGCS 1.0.1 from go.cygnus.com (USA California -- High speed link
-provided by Stanford)</a>
+<p>Download EGCS 1.0.1 from ftp.cygnus.com (USA California) or
+go.cygnus.com (USA California -- High speed link provided by Stanford).
 
 <p>The EGCS 1.0.1 release is also available on many mirror sites.<br>
 <a href="../mirrors.html">Goto mirror list to find a closer site</a>
