--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -31,22 +31,6 @@ port</a></h2>
 as well as 32 and 64-bits floats. It uses ELF32 for object files and
 DWARF-2 for debugging information.</p>
 
-<h2><a name="sun-make"></a><a href="ftp://ftp.axis.se/pub/users/hp/gcc/gcc-2.95.1-sun-make-patch1.txt">Patch
-to build elsewhere than in the source directory using Sun make</a></h2>
-
-<p>If, for some reason, you cannot use GNU make nor build in the
-<i>srcdir</i>, this patch for GCC 2.95.1 will allow you to build GCC
-using Sun make in a <i>srcdir</i> != <i>objdir</i> setup.</p>
-
-<p>Apply it with (for example) GNU patch:</p>
-<blockquote><code>
-patch -p1 -d <i>/path/to/gcc-2.95.1</i> &lt;
-gcc-2.95.1-sun-make-patch1.txt
-</code></blockquote>
-<p>This patch is not supposed to interfere with proper building and
-installation on non-Sun systems or when using GNU make.</p>
-
-<p>Contact: <a href="mailto:hp@axis.se">hp@axis.se</a></p>
 
 <h2><a name="libgxx"></a><a href="http://www.cygnus.com/~manfredh/libgxx/">Libg++</a></h2>
 
@@ -107,6 +91,7 @@ StackGuard 1.21 is based on gcc-2.7.2.</p>
 
 <hr>
 
+
 <h1>GCC Museum</h1>
 
 <p>In this section you will find extensions which do not (directly)
@@ -116,7 +101,7 @@ be helpful to consult for future development.</p>
 <h2><a href="http://www.uow.edu.au/~andrewm/gsptools.html">Development
 tools for the TMS340x0</a></h2>
 
-<p>A GCC port to a <EM>bit-addressable</EM> architecture.</p>
+<p>A GCC port to a <em>bit-addressable</em> architecture.</p>
 
 <h2><a href="http://www.motorola.com/SPS/DSP/tools/sw-dev.html">Port to
 Motorola 56k DSPs</a></h2>
