--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -33,7 +33,7 @@
   <ul>
     <li><a href="c++features.html">Many C++ improvements</a>.
     <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">Many Fortran improvements</a>.
-    <li><a href="java/gcj-announce.txt">Java</a>
+    <li><a href="../java/gcj-announce.txt">Java</a>
     front-end has been integrated.
     <a href="../news/javaannounce.html">runtime library</a>
     is available separately.
