--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -218,8 +218,7 @@ different programming languages.</p>
 <tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>
     <td>C
     <td>20.6
-    <td><a href="ftp://ftp.gnu.org/gnu/emacs/emacs-20.6.tar.gz">
-        emacs-20.6.tar.gz</a>
+    <td>
 <tr><td><a href="http://www.acl.lanl.gov/pooma/">POOMA</a>
     <td>C++
     <td>2.2.0
@@ -280,18 +279,16 @@ previous releases.  Therefore, we will use the following benchmarks
 for measuring code quality:</p>
 
 <table align="center">
-<tr><th align=left>Name
-    <th align=left>Language
-    <th align=left>Source URL
-<tr><td>gzip<td>C
-    <td><a href="ftp://ftp.gnu.org/gnu/gzip/gzip-1.2.4a.tar.gz">
-        gzip-1.2.4a.tar.gz</a>
-<tr><td>Stepanov<td>C++
+<tr><th align=left>Name</th>
+    <th align=left>Language</th>
+    <th align=left>Source URL</th>
+<tr><td>gzip 1.2.4a</td><td>C</td>
+<tr><td>Stepanov</td><td>C++</td>
     <td><a href="ftp://ftp.kai.com/pub/benchmarks/stepanov_v1p2.C">
-         stepanov_v1p2.C</a>
-<tr><td>LAPACK<td>Fortran
+         stepanov_v1p2.C</a></td>
+<tr><td>LAPACK</td><td>Fortran</td>
     <td><a href="http://www.netlib.org/lapack/lapack.tgz">
-        LAPACK 3.0 (timing programs)</a>
+        LAPACK 3.0 (timing programs)</a></td>
 </table>
 
 <p>A Java benchmark is not required for this release since there is
@@ -368,5 +365,3 @@ in previous releases.)
 
 </body>
 </html>
-
-
