--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -438,9 +438,8 @@ back end, focusing on better optimization for the Pentium II.
 <dt><b>May 27, 1999</b></dt>
 <dd>
 Toon Moene has emailed (and posted) his notes on
-the GNU Fortran (<code>g77</code>) Birds-of-a-Feather (BOF) session at <a
-href="http://www.linuxexpo.org/">LinuxExpo</a>
-to the appropriate lists,
+the GNU Fortran (<code>g77</code>) Birds-of-a-Feather (BOF) session at
+LinuxExpo to the appropriate lists,
 and Craig Burley has made Toon's notes available (in edited form) at <a
 href="http://world.std.com/~burley/bof.html">http://world.std.com/~burley/bof.html</a>.
 
