--- a/htdocs/egcs-1.0/egcs-1.0.html
+++ b/htdocs/egcs-1.0/egcs-1.0.html
@@ -53,15 +53,10 @@ Massachusetts office to help share the load.  We also encourage folks to
 use the many mirrors available throughout the world.
 
 <p>Update: Big thanks to Stanford for providing a high speed link for
-downloading EGCS! (go.cygnus.com)
-
-<p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-Download EGCS 1.0
-from ftp.cygnus.com (USA California)</a>
-<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
-Download EGCS 1.0 from go.cygnus.com (USA California -- High speed link
-provided by Stanford)</a>
-
+downloading EGCS (go.cygnus.com)!
+  
+<p>Download EGCS 1.0.1 from ftp.cygnus.com (USA California) or
+go.cygnus.com (USA California -- High speed link provided by Stanford).
 
 <p>The EGCS 1.0 release should be available on most mirror sites by now.<br>
 <a href="../mirrors.html">Goto mirror list to find a closer site</a>
