--- a/htdocs/egcs-1.1/egcs-1.1.2.html
+++ b/htdocs/egcs-1.1/egcs-1.1.2.html
@@ -186,12 +186,7 @@ is what makes EGCS successful.
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using EGCS 1.1.2.
 
-<! -- <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-Download EGCS 1.1.2
-from egcs.cygnus.com (USA California)</a> -->
-<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
-Download EGCS 1.1.2 from go.cygnus.com (USA California - High speed link
-provided by Stanford)</a>
+<p>Download EGCS 1.1.1 from egcs.cygnus.com (USA California)</a>.</p>
 
 <p>The EGCS 1.1.2 release is also available on many
 <a href="../mirrors.html">mirror sites</a>.
