--- a/htdocs/egcs-1.1/egcs-1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.html
@@ -48,18 +48,13 @@ will update those pages as new information becomes available.
 
 <p> The EGCS project would like to thank the numerous people that have
 contributed new features, test results, bugfixes, etc.  This 
-<a href="../thanks.html">amazing group of volunteers</a> is what makes
-EGCS successful.
+<a href="http://gcc.gnu.org/thanks.html">amazing group of volunteers</a>
+is what makes EGCS successful.
 
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using EGCS 1.1.
 
-<p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-Download EGCS 1.1
-from egcs.cygnus.com (USA California)</a>
-<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
-Download EGCS 1.1 from go.cygnus.com (USA California -- High speed link
-provided by Stanford)</a>
+<p>Download EGCS 1.1.1 from egcs.cygnus.com (USA California)</a>.</p>
 
 <p>The EGCS 1.1 release is also available on many mirror sites.<br>
 <a href="../mirrors.html"> Goto mirror list to find a closer site</a>
