Fix unintended (and incorrect) changes from previous commit.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -1,8 +1,10 @@
 <html>
 
 <head>
+<meta name="title" content="Links and Selected Readings">
+<meta name="keywords" content="GCC, compilers, optimization, documentation, FAQ, standards">
 <title>Links and Selected Readings</title>
-<head>
+</head>
 
 <body>
 
@@ -462,5 +464,5 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 
 </ul>
  
-</BODY>
+</body>
 </html>
