The previous commit added a couple of incorrect version references; make the corresponding text version neutral.

--- a/htdocs/egcs-1.0/egcs-1.0.3.html
+++ b/htdocs/egcs-1.0/egcs-1.0.3.html
@@ -76,7 +76,7 @@ will update those pages as new information becomes available.
 <p>Update: Big thanks to Stanford for providing a high speed link for
 downloading EGCS (go.cygnus.com)!
   
-<p>Download EGCS 1.0.1 from ftp.cygnus.com (USA California) or
+<p>Download EGCS from ftp.cygnus.com (USA California) or
 go.cygnus.com (USA California -- High speed link provided by Stanford).
 
 <p>The EGCS 1.0.3 release is also available on many mirror sites.<br>
