--- a/htdocs/egcs-1.1/egcs-1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.html
@@ -54,7 +54,7 @@ is what makes EGCS successful.
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using EGCS 1.1.
 
-<p>Download EGCS 1.1.1 from egcs.cygnus.com (USA California)</a>.</p>
+<p>Download EGCS from egcs.cygnus.com (USA California)</a>.</p>
 
 <p>The EGCS 1.1 release is also available on many mirror sites.<br>
 <a href="../mirrors.html"> Goto mirror list to find a closer site</a>
