--- a/htdocs/egcs-1.0/egcs-1.0.html
+++ b/htdocs/egcs-1.0/egcs-1.0.html
@@ -55,7 +55,7 @@ use the many mirrors available throughout the world.
 <p>Update: Big thanks to Stanford for providing a high speed link for
 downloading EGCS (go.cygnus.com)!
   
-<p>Download EGCS 1.0.1 from ftp.cygnus.com (USA California) or
+<p>Download EGCS from ftp.cygnus.com (USA California) or
 go.cygnus.com (USA California -- High speed link provided by Stanford).
 
 <p>The EGCS 1.0 release should be available on most mirror sites by now.<br>
