--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -69,6 +69,13 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 
 <table>
 <tr><td valign="top">
+<b>October 2, 2001</b>
+</td><td>
+Tom Tromey of Red Hat has written the support code necessary to
+implement <tt>java.lang.ref.*</tt>.
+</td></tr>
+
+<tr><td valign="top">
 <b>September 7, 2001</b>
 </td><td>
 Anthony Green of Red Hat has added a facility for compiling property
