* index.html: Add announcement for integration of Ada front end

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -154,6 +154,13 @@ GCC 3.0.2 is scheduled for October.
 
 <dl>
 
+<dt><b>October 2, 2001</b></dt>
+<dd>
+<a href="http://www.gnat.com/">Ada Core Technologies, Inc</a>, has contributed 
+its GNAT Ada 95 front end and associated tools. The GNAT compiler fully 
+implements the Ada language as defined by the ISO/IEC 8652 standard. 
+</dd>
+
 <dt><b>September 11, 2001</b></dt>
 <dd>
 Roman Lechtchinsky, Technische Universit&auml;t Berlin, has donated support
