Add i686-pc-linux-gnu for Slackware 8.0, glibc 2.2.3.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -131,6 +131,11 @@
 </tr>
 
 <tr>
+<td>i686-pc-linux-gnu</td>
+<td>Successful (Slackware 8.0, glibc 2.2.3)</td>
+</tr>
+
+<tr>
 <td>ia64-unknown-linux</td>
 <td>Successful (Red Hat 7.1.94, glibc 2.2.4)</td>
 </tr>
