--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -136,6 +136,11 @@
 </tr>
 
 <tr>
+<td>i686-pc-linux-gnu</td>
+<td>Successful (SuSE 7.0, glibc 2.1)</td>
+</tr>
+
+<tr>
 <td>ia64-unknown-linux</td>
 <td>Successful (Red Hat 7.1.94, glibc 2.2.4)</td>
 </tr>
