Make link to CodeSourcery's snapshots more generic.

--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -41,8 +41,8 @@ brik -C &lt; .brik</p>
 of our current development sources on a regular basis:</p>
 
 <ul>
-<li><a href="http://www.codesourcery.com/gcc-snapshots.html">i686-pc-linux-gnu</a>
-    by CodeSourcery.</li>
+<li><a href="http://www.codesourcery.com/gcc-snapshots.html">CodeSourcery:
+    various platforms</a></li>
 </ul>
 
 </body>
