--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -26,6 +26,11 @@
 </tr>
 
 <tr>
+<td>alpha-pld-linux-gnu</td>
+<td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
+</tr>
+
+<tr>
 <td>alphaev5-dec-osf5.1</td>
 <td>Successful</td>
 </tr>
@@ -91,6 +96,11 @@
 </tr>
 
 <tr>
+<td>i386-pld-linux-gnu</td>
+<td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
+</tr>
+
+<tr>
 <td>i386-redhat-linux-gnu</td>
 <td>Successful (WinLinux 2001)</td>
 </tr>
@@ -108,6 +118,11 @@
 <tr>
 <td>i586-pc-linux-gnu</td>
 <td>Successful</td>
+</tr>
+
+<tr>
+<td>i586-pld-linux-gnu</td>
+<td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
 </tr>
 
 <tr>
@@ -138,6 +153,11 @@
 <tr>
 <td>i686-pc-linux-gnu</td>
 <td>Successful (SuSE 7.0, glibc 2.1)</td>
+</tr>
+
+<tr>
+<td>i686-pld-linux-gnu</td>
+<td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
 </tr>
 
 <tr>
@@ -173,6 +193,11 @@
 <tr>
 <td>sparc-linux-gnu</td>
 <td>Successful (Debian)</td>
+</tr>
+
+<tr>
+<td>sparc-pld-linux-gnu</td>
+<td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
 </tr>
 
 <tr>
