Add i686-pc-linux-gnu (Debian 2.2, glibc 2.1.3).

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -137,6 +137,11 @@
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Successful (Debian 2.2, glibc 2.1.3)</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Successful (Mandrake 8.0, glibc 2.2.4)</td>
 </tr>
 
