* index.html: Use <code>, not <tt>.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,7 +72,7 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <b>October 2, 2001</b>
 </td><td>
 Tom Tromey of Red Hat has written the support code necessary to
-implement <tt>java.lang.ref.*</tt>.
+implement <code>java.lang.ref.*</code>.
 </td></tr>
 
 <tr><td valign="top">
