Update for inclusion of Ada front end in GCC.

--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -9,8 +9,9 @@
 
 <p>Currently the main GCC distribution contains front-ends for C
 (gcc), C++ (g++), Objective C, Chill (unmaintained),
-Fortran (g77), and Java (<a
-href="java/">GCJ</A>).</p>
+Fortran (g77), Java (<a
+href="java/">GCJ</A>), and Ada (GNAT).  GCC 3.1 will be the first official
+version of GCC to include the Ada front end.</p>
 
 <p>There are several more front-ends for different languages that have
 been written for GCC but not yet integrated into the main distribution
@@ -22,16 +23,10 @@ front-ends are listed along with <a href="readings.html">other links
 and readings</a>.  The source files <code>tree.h</code> and
 <code>tree.def</code> are the key ones to be familiar with.</p>
 
-<p>Some of these front-ends are very much works in progress; others,
-such as GNAT, are very mature.</p>
+<p>Some of these front-ends are very much works in progress; others
+are very mature.</p>
 
 <ul>
-
-<li>The GNU Ada Translator (GNAT): <a href="http://www.gnat.com/">Ada
-Core Technologies</a>, <a
-href="ftp://ftp.cs.nyu.edu/pub/gnat/">sources and binaries</a>, <a
-href="http://www.gnuada.org/alt.html">Ada for Linux Team</a>.  This
-front-end is written in Ada.</li>
 
 <li><a href="http://agnes.dida.physik.uni-essen.de/~gnu-pascal/">GNU
 Pascal Compiler</a> (GPC).</li>
