--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -121,7 +121,8 @@ a new <a href="gccmission.html">mission statement</a>.
 <p>Currently GCC contains front-ends for C, C++, Objective C, Chill,
 Fortran, and <a href="java/">Java</A>
 as well as libraries for these languages (<a href="libstdc++/">libstdc++</a>,
-libgcj,...).
+libgcj,...).  The next major release, GCC 3.1, will also include an
+Ada front end.
 </p>
 
 <p>We want to work closely with developers to help and encourage them
