--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -377,6 +377,17 @@ tahoe. These are listed here just for completeness.
 
 
 
+<h3>Ada information</h3>
+
+<ul>
+  <li><a href="http://www.gnat.com/">Ada Core Technologies</a></li>
+  <li><a href="ftp://ftp.cs.nyu.edu/pub/gnat/">GNAT sources and
+  binaries</a></li>
+  <li><a href="http://www.gnuada.org/alt.html">Ada for GNU/Linux Team</a></li>
+</ul>
+
+
+
 <h3>Modula 3 information</h3>
 
 <ul>
