--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -74,6 +74,8 @@ does not foo", "objc crashes when doing bar".</dd>
 <dd>This indicates the GCC subproject which is affected by the problem.
     Currently, it can be one of
   <dl>
+  <dt>ada</dt>
+  <dd>A problem with the Ada compiler, libraries or tools.</dd>
   <dt>bootstrap</dt>
   <dd>GCC fails to bootstrap. This should be filed <em>only</em> if a
   bootstrap failure prevails for an extended period of time (at least
