2001-10-09  Phil Edwards  <pme@gcc.gnu.org>
	* download.html:  More HTML->XHTML and lowercasing of tags.
	* index.html:  Likewise.
	* status.html:  Likewise.
	* thanks.html:  Likewise.  More thanks.

--- a/htdocs/libstdc++/thanks.html
+++ b/htdocs/libstdc++/thanks.html
@@ -1,9 +1,8 @@
 <html>
 <head>
- <meta NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
+ <meta name="KEYWORDS" content="libstdc++, homepage, home, g++, libg++, STL">
  <title>Standard C++ Library v3</title>
-<link REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: thanks.html,v 1.14 2001/06/13 14:53:31 pme Exp $ -->
+<link rel=StyleSheet href="lib3styles.css">
 </head>
 <body>
 
@@ -11,7 +10,7 @@
 
 
 
-<h3 CLASS="centered">Contributors</h3>
+<h2 class="centered">Contributors</h2>
 
 <p>
    <!-- This little ditty was ripped wholesale from Anthony Green's
@@ -25,7 +24,7 @@
    Please keep this list in alphabetical order.
 
    <!--
-         Latest update 2001-06-12, more or less.
+         Latest update 2001-10-02, more or less.
    -->
 <ul>
 
@@ -95,12 +94,15 @@
       the main GCC project.
 
   <li>Loren James Rittle for threading fixes, thread-related configury
-      changes, and solutions to really tricky I/O problems.
+      changes, critical threading documentation, and solutions to really
+      tricky I/O problems.
 
   <li>Chip Salzenberg for patches and improvements to locales, traits,
       Makefiles, libio, libtool hackery, and &quot;long long&quot; support.
 
-  <li>Peter Schmid for constant testing, and header file tweaks.
+  <li>Peter Schmid for constant testing -- especially application testing,
+      going above and beyond what was requested for the release criteria
+      -- and header file tweaks.
 
   <li>Kenny Simpson for prompting fixes due to defect reports from the
       LWG (thereby keeping us in line with updates from the ISO).
@@ -117,7 +119,7 @@
       with the tricky Solaris 8+ headers, and for pushing the build-time
       header tree.
 
-</UL></p>
+</ul></p>
 
 <p>We'd also like to thank the folks who have contributed time and
    energy in testing libstdc++-v3, especially those sending in testsuite
