--- a/htdocs/libstdc++/download.html
+++ b/htdocs/libstdc++/download.html
@@ -1,9 +1,8 @@
 <html>
 <head>
- <meta NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
+ <meta name="KEYWORDS" content="libstdc++, homepage, home, g++, libg++, STL">
  <title>Standard C++ Library v3</title>
-<link REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: download.html,v 1.13 2001/02/20 00:43:57 pme Exp $ -->
+<link rel=StyleSheet href="lib3styles.css">
 </head>
 <body>
 
