--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -1,9 +1,8 @@
 <html>
 <head>
- <meta NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
+ <meta name="KEYWORDS" content="libstdc++, homepage, home, g++, libg++, STL">
  <title>Standard C++ Library v3</title>
-<link REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: index.html,v 1.16 2001/09/17 23:03:03 pme Exp $ -->
+<link rel=StyleSheet href="lib3styles.css">
 </head>
 <body>
 
