2001-10-09  Alexandre Petit-Bianco  <apbianco@redhat.com>
	* contribute.html (Copyright Assignment): Mention assigments@gnu.org.

( http://gcc.gnu.org/ml/gcc-patches/2001-10/msg00390.html )

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -35,7 +35,9 @@ copyright assignment form filled out and filed with the FSF.</p>
 documentation by the FSF</a> for details and contact us (either via
 the <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a> list or the
 GCC maintainer that is taking care of your contributions) to obtain
-the relevant forms.</p>
+the relevant forms. Note that it's a good idea to put
+<a href="mailto:assignments@gnu.org">assignments@gnu.org</a> in copy with
+your request.</p>
 
 <p>Small changes can be accepted without a copyright assignment form
 on file.</p>
