Consistently use "front end" as a noun.

--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -1,29 +1,29 @@
 <html>
 
 <head>
-<title>GCC Front-Ends</title>
+<title>GCC Front Ends</title>
 </head>
 
 <body>
-<h1 align=center>GCC Front-Ends</h1>
+<h1 align=center>GCC Front Ends</h1>
 
-<p>Currently the main GCC distribution contains front-ends for C
+<p>Currently the main GCC distribution contains front ends for C
 (gcc), C++ (g++), Objective C, Chill (unmaintained),
 Fortran (g77), Java (<a
 href="java/">GCJ</A>), and Ada (GNAT).  GCC 3.1 will be the first official
 version of GCC to include the Ada front end.</p>
 
-<p>There are several more front-ends for different languages that have
+<p>There are several more front ends for different languages that have
 been written for GCC but not yet integrated into the main distribution
 of the GNU Compiler Collection.  Some of these may be integrated in
 future; others may not, for various reasons.</p>
 
-<p>Example front-ends for toy languages and guidance on writing
-front-ends are listed along with <a href="readings.html">other links
+<p>Example front ends for toy languages and guidance on writing
+front ends are listed along with <a href="readings.html">other links
 and readings</a>.  The source files <code>tree.h</code> and
 <code>tree.def</code> are the key ones to be familiar with.</p>
 
-<p>Some of these front-ends are very much works in progress; others
+<p>Some of these front ends are very much works in progress; others
 are very mature.</p>
 
 <ul>
@@ -54,7 +54,7 @@ href="http://www.m3.org/">www.m3.org</a>); SRC M3 is based on an old
 version of GCC and PM3 and CAM3 derive from SRC M3.  This compiler is
 written in Modula-3; for copyright and licensing reasons neither the
 small amount of C code that links to GCC and provides the interface to
-the back end, nor the front-end proper, is likely to be integrated in
+the back end, nor the front end proper, is likely to be integrated in
 GCC, nor is the front-end likely to change to a more normal interface
 of linking directly to the back end.</li>
 
