--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -69,7 +69,7 @@
 <A HREF="contribute.html">Contributing</A><BR>
 <A HREF="contributewhy.html">...Why?</A><BR>
 <A HREF="projects/">Open projects</A><BR>
-<A HREF="frontends.html">Front-ends</A><BR>
+<A HREF="frontends.html">Front ends</A><BR>
 <A HREF="extensions.html">Extensions</A><BR>
 <A HREF="cvs.html">CVS read access</A><BR>
 <A HREF="rsync.html">Rsync read access</A><BR>
@@ -118,7 +118,7 @@ as the official GNU maintainer for GCC.  At that time GCC was renamed
 from the "GNU C Compiler" to the "GNU Compiler Collection" and received
 a new <a href="gccmission.html">mission statement</a>.
 
-<p>Currently GCC contains front-ends for C, C++, Objective C, Chill,
+<p>Currently GCC contains front ends for C, C++, Objective C, Chill,
 Fortran, and <a href="java/">Java</A>
 as well as libraries for these languages (<a href="libstdc++/">libstdc++</a>,
 libgcj,...).  The next major release, GCC 3.1, will also include an
