--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -186,6 +186,11 @@
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix4.3.3.0</td>
+<td>Successful</td>
+</tr>
+
+<tr>
 <td>powerpc-unknown-linux-gnu</td>
 <td>Successful</td>
 </tr>
