--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -155,6 +155,15 @@ GCC 3.0.2 is scheduled for October.
 
 <dl>
 
+<dt><b>October 11, 2001</b></dt>
+<dd>
+<a href="http://www.axis.com/">Axis Communications</a> has contributed 
+its port to the CRIS CPU architecture, used in the ETRAX
+system-on-a-chip series.  See
+<a href="http://developer.axis.com/">developer.axis.com</a> for technical
+information.
+</dd>
+
 <dt><b>October 2, 2001</b></dt>
 <dd>
 <a href="http://www.gnat.com/">Ada Core Technologies, Inc</a>, has contributed 
