Replace obsolete GNU libc email address by GNU libc web page.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -295,9 +295,9 @@ main.</p>
 
 <p>There is a common misconception that the GCC developers are
 responsible for GNU libc.  These are in fact two entirely separate
-projects.  The appropriate place to ask questions relating to GNU libc
-is <a href="mailto:libc-alpha@sources.redhat.com">
-libc-alpha@sources.redhat.com</a>.
+projects; please check the
+<a href="http://www.gnu.org/software/glibc/">GNU libc web pages</a>
+for details.
 </p></dd>
 
 <dt><em>Cannot use preprocessor directive in macro arguments.</em></dt>
