Add i586-pc-linux-gnu (Caldera OpenLinux 2.2).

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -121,6 +121,11 @@
 </tr>
 
 <tr>
+<td>i586-pc-linux-gnu</td>
+<td>Successful (Caldera OpenLinux 2.2)</td>
+</tr>
+
+<tr>
 <td>i586-pld-linux-gnu</td>
 <td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
 </tr>
