--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -67,6 +67,9 @@ Successful
 <p><b>armv4l-unknown-linux-gnu</b><br>
 Successful
 
+<p><b>clipper-intergraph-clix</b><br>
+Successful, but requires hacks
+
 <p><b>hppa1.1-hp-hpux9.00</b><br>
 Successful
 
