Fix broken/redirected links.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -332,7 +332,7 @@ given global write permissions throughout the GCC sources.
 </dd>
 
 <dd>
-<a href="http://www.cygnus.com">Cygnus</a> has installed
+Cygnus has installed
 <a href="news/server.html">various upgrades</a> to improve services
 for GCC and other open source projects hosted by Cygnus.
 </dd>
@@ -643,7 +643,7 @@ optimization</a> support.
 
 <dt><b>September 6, 1998</b></dt>
 <dd>
-  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="http://sources.redhat.com/java/gcj-announce.txt"><b>Java front end</b></a>.
+Cygnus donates <a href="java/gcj-announce.txt"><b>Java front end</b></a>.
 </dd>
 
 <dt><b>September 3, 1998</b></dt>
