--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -85,7 +85,7 @@ tahoe. These are listed here just for completeness.
   <br><a href="http://www.arm.com/Documentation/">ARM Documentation</a>
 
  <li>AVR
-  <br>Manufacturer: <a href="http://www.atmel.com/atmel">Atmel</a>
+  <br>Manufacturer: <a href="http://www.atmel.com/atmel/">Atmel</a>
   <br><a href="http://www.atmel.com/atmel/products/prod23.htm">AVR Documentation</a>
 
  <li>c4x
