--- a/htdocs/gcc-2.95/gcc-2.95.1.html
+++ b/htdocs/gcc-2.95/gcc-2.95.1.html
@@ -105,9 +105,9 @@ what makes GCC successful.
 <p> Download GCC 2.95.1 from the
 <a href="ftp://ftp.gnu.org/pub/gnu/gcc/">GNU FTP server (ftp://ftp.gnu.org)</a>
 <br>Download GCC 2.95.1 from the
-<a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">GCC/EGCS FTP server (ftp://go.cygnus.com)</a>
+<a href="ftp://gcc.gnu.org/pub/gcc/releases/index.html">GCC FTP server</a>
 <br><a href="http://www.gnu.org/order/ftp.html">Find a GNU mirror site</a>
-<br><a href="../mirrors.html">Find a GCC/EGCS mirror site</a>
+<br><a href="../mirrors.html">Find a GCC mirror site</a>
 
 <p>For additional information about GCC please see the
 <a href="../index.html">GCC project web server</a> or contact the
